--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
       <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-          <li><img src="/images/img1.jpg" alt="Веб-разработка" width="370" height="294" /></li>
+          <li><img src="./images/img1.jpg" alt="Веб-разработка" width="370" height="294" /></li>
           <li>
-            <img src="/images/img2.jpg" alt="Мобильная адаптация сайта" width="370" height="294" />
+            <img src="./images/img2.jpg" alt="Мобильная адаптация сайта" width="370" height="294" />
           </li>
-          <li><img src="/images/img3.jpg" alt="Графический дизайн" width="370" height="294" /></li>
+          <li><img src="./images/img3.jpg" alt="Графический дизайн" width="370" height="294" /></li>
         </ul>
       </section>
       <!-- Наша команда -->
@@ -70,22 +70,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="/images/igor.jpg" alt="Фото Игоря Демьяненко" width="270" height="260" />
+            <img src="./images/igor.jpg" alt="Фото Игоря Демьяненко" width="270" height="260" />
             <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="/images/olga.jpg" alt="Фото Ольги Репина" width="270" height="260" />
+            <img src="./images/olga.jpg" alt="Фото Ольги Репина" width="270" height="260" />
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="/images/nikolaj.jpg" alt="Фото Николая Тарасова" width="270" height="260" />
+            <img src="./images/nikolaj.jpg" alt="Фото Николая Тарасова" width="270" height="260" />
             <h3>Николай Тарасов</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="/images/mihail.jpg" alt="Фото Михаила Ермакова" width="270" height="260" />
+            <img src="./images/mihail.jpg" alt="Фото Михаила Ермакова" width="270" height="260" />
             <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
