--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,7 +10,7 @@
     <!-- Шапка сайта -->
     <header>
       <nav>
-        <a href="/index.html">Web Studio</a>
+        <a href="./index.html">Web Studio</a>
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
@@ -24,7 +24,7 @@
     </header>
     <!-- Основной блок -->
     <main>
-      <!-- Заказать услугу -->
+      <!-- Герой -->
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
@@ -95,7 +95,7 @@
     <!-- Футер -->
     <footer>
       <div>
-        <a href="/index.html">Web Studio</a>
+        <a href="./index.html">Web Studio</a>
       </div>
       <address>
         <ul>
