--- a/index.html
+++ b/index.html
@@ -94,15 +94,11 @@
     </main>
     <!-- Футер -->
     <footer>
-      <div>
-        <a href="./index.html">Web Studio</a>
-      </div>
+      <a href="./index.html">Web Studio</a>
       <address>
-        <ul>
-          <li><p>г. Киев, пр-т Леси Украинки, 26</p></li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-        </ul>
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <a href="mailto:info@example.com">info@example.com</a><br />
+        <a href="tel:+380991111111">+38 099 111 11 11</a>
       </address>
     </footer>
   </body>
